Fixed horizontal scrollbar appearing after single vis maintenance

--- a/Maintenance/main.css
+++ b/Maintenance/main.css
@@ -120,7 +120,7 @@ main > *{
     margin: .25em;
 
     /*Spacing of the sub elements*/
-    flex: 50%;
+    flex: 0.99;
 }
 
 #separator-slider{
